--- a/src/assets/styles/opwebui.css
+++ b/src/assets/styles/opwebui.css
@@ -5,12 +5,12 @@
 
 @font-face {
 	font-family: "Ubuntu Medium";
-	src: url("~@/assets/fonts/Ubuntu-Medium.ttf") format('truetype')
+	src: url("../assets/fonts/Ubuntu-Medium.ttf") format('truetype')
 }
 
 @font-face {
 	font-family: "OpenSans";
-	src: url("~@/assets/fonts/OpenSans-Regular.ttf") format('truetype')
+	src: url("../assets/fonts/OpenSans-Regular.ttf") format('truetype')
 }
 
 .bg-dark {
