:repeat: Bump dependencies
:repeat: Bump dependencies
:shirt: Reorganise components
:construction: Create Statistics Vue with ChartJS POC
:green_heart: Rename locales with country/language

--- a/src/assets/styles/opwebui.css
+++ b/src/assets/styles/opwebui.css
@@ -9,7 +9,7 @@
 }
 
 @font-face {
-	font-family: 'OpenSans-REgular';
+	font-family: 'OpenSans-Regular';
 	src: url("../fonts/OpenSans-Regular.ttf") format("truetype");
 }
 
